@@ -1,3 +1,10 @@
+Wed Sep 26 17:51:45 BST 2007  Colin Watson  <cjwatson@debian.org>
+
+	* src/globbing.c (look_for_file): Don't escape the hierarchy path;
+	  it isn't necessary and it causes problems for paths containing
+	  metacharacters (Debian bug #444187).
+	* src/globbing.h (look_for_file): Update prototype.
+
 Tue Sep 18 11:29:26 BST 2007  Colin Watson  <cjwatson@debian.org>
 
 	* man/po4a/po4a.cfg: Add po4a mechanism for manual page translation,
